Centrally align the background image to prevent jarring on resize

--- a/css/base.css
+++ b/css/base.css
@@ -15,7 +15,7 @@ body {
 
 #background {
 	display: none;
-	background-repeat: no-repeat;
+	background: no-repeat center;
 	background-size: cover;
 	filter: blur(8px);
 	position: fixed;
